--- a/package.json
+++ b/package.json
@@ -15,9 +15,15 @@
 		"typescript": "^3.9.7"
 	},
 	"dependencies": {
+		"@types/bcryptjs": "^2.4.2",
+		"@types/jsonwebtoken": "^8.5.0",
+		"@types/uuid": "^8.0.1",
+		"bcryptjs": "^2.4.3",
 		"cors": "^2.8.5",
 		"express": "^4.17.1",
+		"jsonwebtoken": "^8.5.1",
 		"knex": "^0.21.2",
-		"sqlite3": "^5.0.0"
+		"sqlite3": "^5.0.0",
+		"uuid": "^8.3.0"
 	}
 }
